Add logging configuration and utility methods; update test reports
- Introduced a new logging configuration using Log4j2 for better log management.
- Added utility methods in Strings.java for string manipulation, including null value handling and Markdown stripping.
- Created requests.http file for API testing with various scenarios, including error handling and validation checks.
- Updated test report files to reflect changes in execution time for acceptance, integration, and controller tests.